@@ -25,7 +25,7 @@
 
 AC_INIT(makegdbm/makegdbm.c)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(perdition, 0.1.10beta4)
+AM_INIT_AUTOMAKE(perdition, 0.1.10beta4df2)
 
 AC_PROG_CC
 AM_PROG_LIBTOOL
