@@ -11,6 +11,7 @@ XXX
    - May log to stdout or stderr.
    - Updated debian dependancies
    - Updated man page dates
+   - Handle empty map library better
 
 
 ----------------------------------------------------------------------
